--- a/WFC/index.html
+++ b/WFC/index.html
@@ -17,7 +17,7 @@
                         <img src="Profile.jpg" class="profile" alt="Avatar">
                     </div>
                     <div class="col-12">
-                        <p>RWD-1058</p><span style="text-transform:capitalize; font-size:2.5vw;">soung oo paing</span>
+                        <p>RWD-1058</p><div class="myName">soung oo paing</div>
                     </div>
 
                 </div> 
@@ -47,8 +47,14 @@
             </div>
         </div>
     </div>
- <!-- Flashcard---------------------------------------------------------------------------------------------  -->
-    <!-- <div class="second_container">
+    <!-- whitespace------------------------------------------------------------------------------------------- -->
+    <div class="second_container">
+        <div class="row">
+            maybe some card?
+        </div>
+    </div>
+    <!-- Flashcard---------------------------------------------------------------------------------------------  -->
+    <div class="third_container">
         <div class="flashcard-container" id="quiz">
             <div id="question_text">Question Text</div>
             <ul>
@@ -59,6 +65,6 @@
             </ul>
             <button id="flashcard_btn">Submit</button>
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
